:art: 記事にサムネイルを追加

--- a/src/content/news/2021-02-03.md
+++ b/src/content/news/2021-02-03.md
@@ -1,6 +1,7 @@
 ---
 title: "ちご「雀聖3なったで！あと1つ！」"
-createdAt: 2021-02-03
+date: 2021-02-03
+thumbnail: "/content/news/2021-02-03.jpg"
 ---
 
 ちご「雀聖3なったで！あとひと1つ！」
