--- a/src/content/news/2021-02-27.md
+++ b/src/content/news/2021-02-27.md
@@ -1,6 +1,7 @@
 ---
 title: "えー「こち負けやります！全員かかってこい！」"
-createdAt: 2021-02-27
+date: 2021-02-27
+thumbnail: "/content/news/2021-02-27.jpg"
 ---
 
 えー「こち負けやります！全員かかってこい！」
