--- a/src/content/news/2021-03-01.md
+++ b/src/content/news/2021-03-01.md
@@ -1,6 +1,7 @@
 ---
 title: "ゆー「えーゆーちごふれずものホームページを作ったよ！」"
-createdAt: 2021-03-01
+date: 2021-03-01
+thumbnail: "/content/news/2021-03-01.jpg"
 ---
 
 ゆー「えーゆーちごふれずものホームページを作ったよ！」
