--- a/src/content/news/2021-01-15.md
+++ b/src/content/news/2021-01-15.md
@@ -1,6 +1,7 @@
 ---
 title: "ふれ「第2回獅子ヶ谷杯を開催します！」"
-createdAt: 2021-01-15
+date: 2021-01-15
+thumbnail: "/content/news/2021-01-15.jpg"
 ---
 
 ふれ「第2回獅子ヶ谷杯を開催します！」
