--- a/src/content/news/2021-01-31.md
+++ b/src/content/news/2021-01-31.md
@@ -1,6 +1,7 @@
 ---
-title: "ずも「新立ち絵公開！かわいかろー！どやどやっ！」"
-createdAt: 2021-01-31
+title: "ずも「新立ち絵公開！かわいかろー！」"
+date: 2021-01-31
+thumbnail: "/content/news/2021-01-31.jpg"
 ---
 
-ゆー「えーゆーちごふれずものホームページを公開しました！」
+ずも「新立ち絵公開！かわいかろー！」
