:art: ニュース概要を追加

--- a/src/content/news/2021-01-15.md
+++ b/src/content/news/2021-01-15.md
@@ -1,6 +1,7 @@
 ---
 title: "ふれ「第2回獅子ヶ谷杯を開催します！」"
 date: 2021-01-15
+icon: "/icons/f_twitter_icon.jpg"
 thumbnail: "/content/news/2021-01-15.jpg"
 ---
 
