--- a/src/content/news/2021-01-31.md
+++ b/src/content/news/2021-01-31.md
@@ -1,6 +1,7 @@
 ---
 title: "ずも「新立ち絵公開！かわいかろー！」"
 date: 2021-01-31
+icon: "/icons/z_twitter_icon.jpg"
 thumbnail: "/content/news/2021-01-31.jpg"
 ---
 
