--- a/src/content/news/2021-02-03.md
+++ b/src/content/news/2021-02-03.md
@@ -1,6 +1,7 @@
 ---
 title: "ちご「雀聖3なったで！あと1つ！」"
 date: 2021-02-03
+icon: "/icons/c_twitter_icon.jpg"
 thumbnail: "/content/news/2021-02-03.jpg"
 ---
 
