--- a/src/content/news/2021-02-27.md
+++ b/src/content/news/2021-02-27.md
@@ -1,6 +1,7 @@
 ---
 title: "えー「こち負けやります！全員かかってこい！」"
 date: 2021-02-27
+icon: "/icons/a_twitter_icon.jpg"
 thumbnail: "/content/news/2021-02-27.jpg"
 ---
 
