--- a/src/content/news/2021-03-01.md
+++ b/src/content/news/2021-03-01.md
@@ -1,6 +1,7 @@
 ---
 title: "ゆー「えーゆーちごふれずものホームページを作ったよ！」"
 date: 2021-03-01
+icon: "/icons/y_twitter_icon.jpg"
 thumbnail: "/content/news/2021-03-01.jpg"
 ---
 
